objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ROL Lead Process</fullName>
        <description>Implemented as part of ROL - Cast Iron - SF Sync</description>
        <isActive>true</isActive>
        <values>
            <fullName>Account Request</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Dormant</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Trash</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASAP_Meet_with_Lead_Owner__c</fullName>
        <formula>HYPERLINK("https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=" &amp; OwnerId ,
"Meet with Lead Owner" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meet with Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASAP_Meet_with_Lead__c</fullName>
        <formula>IF( Email &lt;&gt; "",
    HYPERLINK("https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=" &amp; Id, 
              "Meet with " &amp; FirstName &amp; " " &amp; LastName ), 
    "No email address provided")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meet with Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <description>This is the Allbound app ID for this Account</description>
        <inlineHelpText>This is the Allbound app ID for this Account</inlineHelpText>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attended_No_of_Days__c</fullName>
        <label>(E) Attended(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in BatchUpdateContacts and BatchUpdateLeads Batch</description>
        <label>BatchFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Biz Dev Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Behavior_Score__c</fullName>
        <label>CC Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Combined_Score__c</fullName>
        <formula>CC_Behavior_Score__c  +  CC_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Demographic_Score__c</fullName>
        <label>CC Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Lead_Status__c</fullName>
        <label>CC Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Lost_Details__c</fullName>
        <label>CC Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Recycle_Competitor_Name__c</fullName>
        <label>CC Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2zInc- Chirpe</fullName>
                </value>
                <value>
                    <fullName>Acteva</fullName>
                </value>
                <value>
                    <fullName>AllianceTech</fullName>
                </value>
                <value>
                    <fullName>Aloompa</fullName>
                </value>
                <value>
                    <fullName>Amiando</fullName>
                </value>
                <value>
                    <fullName>Appburst</fullName>
                </value>
                <value>
                    <fullName>ATIV Software</fullName>
                </value>
                <value>
                    <fullName>Bartizan Connects</fullName>
                </value>
                <value>
                    <fullName>Bizzabo</fullName>
                </value>
                <value>
                    <fullName>BlinkMobile Interactive</fullName>
                </value>
                <value>
                    <fullName>Bloodhound</fullName>
                </value>
                <value>
                    <fullName>Boopsie</fullName>
                </value>
                <value>
                    <fullName>Bravura Technologies</fullName>
                </value>
                <value>
                    <fullName>Brown Paper Tickets</fullName>
                </value>
                <value>
                    <fullName>Certain Software</fullName>
                </value>
                <value>
                    <fullName>Close Reach Communications</fullName>
                </value>
                <value>
                    <fullName>Compusytems</fullName>
                </value>
                <value>
                    <fullName>Conference Compass</fullName>
                </value>
                <value>
                    <fullName>ConnectSpan</fullName>
                </value>
                <value>
                    <fullName>ConstantContact</fullName>
                </value>
                <value>
                    <fullName>Convention Data Services</fullName>
                </value>
                <value>
                    <fullName>Conventionist</fullName>
                </value>
                <value>
                    <fullName>Core-Apps</fullName>
                </value>
                <value>
                    <fullName>Crowdcomms</fullName>
                </value>
                <value>
                    <fullName>Delegia</fullName>
                </value>
                <value>
                    <fullName>Doubledutch</fullName>
                </value>
                <value>
                    <fullName>E-proDirect</fullName>
                </value>
                <value>
                    <fullName>Etouches</fullName>
                </value>
                <value>
                    <fullName>Evenium</fullName>
                </value>
                <value>
                    <fullName>Event Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Recycle_Trash_Reason__c</fullName>
        <label>CC Recycle/Trash Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CC_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already a Client</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Being worked by Event Team</fullName>
                </value>
                <value>
                    <fullName>Better fit for CT</fullName>
                </value>
                <value>
                    <fullName>Building App in-house</fullName>
                </value>
                <value>
                    <fullName>Don't See the Value of Mobile</fullName>
                </value>
                <value>
                    <fullName>Future Interest</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Features (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>No Events</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Joker</fullName>
                </value>
                <value>
                    <fullName>Not Enough Budget</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>Too Close to Event</fullName>
                </value>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor - Native (-Specify Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor - Web (-Specify Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using Mobile-Friendly Website</fullName>
                </value>
                <value>
                    <fullName>Working better POC</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_P_Lead_Status__c</fullName>
        <label>CSN-P Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_P_Lost_Details__c</fullName>
        <label>CSN-P Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_P_Recycle_Competitor_Name__c</fullName>
        <label>CSN-P Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSN_P_Status_Details__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Connection</fullName>
                </value>
                <value>
                    <fullName>Biz Bash</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings</fullName>
                </value>
                <value>
                    <fullName>EmpowerMINT</fullName>
                </value>
                <value>
                    <fullName>Event Connect</fullName>
                </value>
                <value>
                    <fullName>Eventective</fullName>
                </value>
                <value>
                    <fullName>Hotel Planner</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>Smart Meetings</fullName>
                </value>
                <value>
                    <fullName>Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Starcite</fullName>
                </value>
                <value>
                    <fullName>Uniquevenues</fullName>
                </value>
                <value>
                    <fullName>Venuedirectory.com</fullName>
                </value>
                <value>
                    <fullName>Venue Finder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_P_Status_Details__c</fullName>
        <label>CSN-P Status Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Contact info</fullName>
                </value>
                <value>
                    <fullName>Billing/Legal Issues</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Hard No</fullName>
                </value>
                <value>
                    <fullName>In the wrong place</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>No Enterprise Potential</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Non-repeatable/No Other Events</fullName>
                </value>
                <value>
                    <fullName>Not a Fit</fullName>
                </value>
                <value>
                    <fullName>Not Right POC</fullName>
                </value>
                <value>
                    <fullName>Not Sourcing Now</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>Unhappy with Cvent</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor (-Specifiy Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using an In-house system</fullName>
                </value>
                <value>
                    <fullName>Poor responses from venues</fullName>
                </value>
                <value>
                    <fullName>Venue/Venue type not listed</fullName>
                </value>
                <value>
                    <fullName>Product difficult to use</fullName>
                </value>
                <value>
                    <fullName>Missing key features</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Planner_Account_Source__c</fullName>
        <label>CSN Planner Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self SignUp</fullName>
                </value>
                <value>
                    <fullName>Sales Rep request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_S_Lead_Status__c</fullName>
        <label>HC Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_S_Lost_Details__c</fullName>
        <label>HC Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_S_Recycle_Competitor_Name__c</fullName>
        <label>HC Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Connection</fullName>
                </value>
                <value>
                    <fullName>Biz Bash</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings</fullName>
                </value>
                <value>
                    <fullName>EmpowerMINT</fullName>
                </value>
                <value>
                    <fullName>Event Connect</fullName>
                </value>
                <value>
                    <fullName>Eventective</fullName>
                </value>
                <value>
                    <fullName>Hotel Planner</fullName>
                </value>
                <value>
                    <fullName>Smart Meetings</fullName>
                </value>
                <value>
                    <fullName>Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Starcite</fullName>
                </value>
                <value>
                    <fullName>Uniquevenues</fullName>
                </value>
                <value>
                    <fullName>Venuedirectory.com</fullName>
                </value>
                <value>
                    <fullName>Venue Finder</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_S_Recycle_Trash_Reason__c</fullName>
        <label>HC Recycle/Trash Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSN_S_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Chain Affiliation has to Approve (which one?)</fullName>
                </value>
                <value>
                    <fullName>Corporate/HMC/OG/AA said no</fullName>
                </value>
                <value>
                    <fullName>Future Interest</fullName>
                </value>
                <value>
                    <fullName>HMC/OG/AA has to approve (which one?)</fullName>
                </value>
                <value>
                    <fullName>Lack of Awarded RFPs</fullName>
                </value>
                <value>
                    <fullName>Limited Advertisers in Market</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Not a fit/Joker</fullName>
                </value>
                <value>
                    <fullName>Not enough Budget</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not ready to Buy (outside of fiscal year)</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor (-Specify Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTQ_Account_Status__c</fullName>
        <label>CTQ Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - New Contact</fullName>
                </value>
                <value>
                    <fullName>B - Working</fullName>
                </value>
                <value>
                    <fullName>C - Qualified</fullName>
                </value>
                <value>
                    <fullName>D - Set</fullName>
                </value>
                <value>
                    <fullName>E - Attended</fullName>
                </value>
                <value>
                    <fullName>F - Pricing</fullName>
                </value>
                <value>
                    <fullName>G - Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>H - Closed Won</fullName>
                </value>
                <value>
                    <fullName>I - Recycle</fullName>
                </value>
                <value>
                    <fullName>J - Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTQ_Contact_Status__c</fullName>
        <label>CTQ Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - New Contact</fullName>
                </value>
                <value>
                    <fullName>B - Working</fullName>
                </value>
                <value>
                    <fullName>C - Qualified</fullName>
                </value>
                <value>
                    <fullName>D - Set</fullName>
                </value>
                <value>
                    <fullName>E - Attended</fullName>
                </value>
                <value>
                    <fullName>F - Pricing</fullName>
                </value>
                <value>
                    <fullName>G - Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>H - Closed Won</fullName>
                </value>
                <value>
                    <fullName>I - Recycle</fullName>
                </value>
                <value>
                    <fullName>J - Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CT_Mobile_Behavior_Score__c</fullName>
        <label>CT-Mobile Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Mobile_Demographic_Score__c</fullName>
        <label>CT-Mobile Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Ticketing_Behavior_Score__c</fullName>
        <label>CT-Ticketing Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Ticketing_Demographic_Score__c</fullName>
        <label>CT-Ticketing Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Fee_for_Events__c</fullName>
        <inlineHelpText>Do you charge fees for any of your events?</inlineHelpText>
        <label>Charge Fee for Events? (EM)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>unanswered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Consent__c</fullName>
        <businessOwnerUser>aakbar@cvent.com</businessOwnerUser>
        <defaultValue>false</defaultValue>
        <label>Chat Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_CSN_S__c</fullName>
        <label>Contact Owner for HC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_CrowdCompass__c</fullName>
        <label>Contact Owner for CrowdCompass</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_Event__c</fullName>
        <label>Contact Owner for Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_PA__c</fullName>
        <label>Contact Owner for PA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_SMM__c</fullName>
        <label>Contact Owner for SMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_for_Survey__c</fullName>
        <label>Contact Owner for Inquisium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Convert_Lead__c</fullName>
        <formula>HYPERLINK("https://ssl.salesforce.com/lead/leadconvert.jsp?retURL=%2F"&amp; Id &amp; "&amp;id="&amp; Id, "Convert")</formula>
        <label>Convert Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_ROL_Account__c</fullName>
        <label>Converted from ROL Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>DATE(YEAR(DateValue(CreatedDate)),Month(DateValue(CreatedDate)),1)</formula>
        <label>Created Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_Source_System_External_ID__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Creation Source System External ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Source_System__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Creation Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFR_StatusUpdateDate__c</fullName>
        <formula>Now()</formula>
        <label>DFR_StatusUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWFConverted__c</fullName>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWFConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dual_Job_Function__c</fullName>
        <description>This field is requested by Stephanie Sweetland under Governance #: GR-0656</description>
        <label>Dual Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_90_Day_Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email 90 Day Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnterWhyLostDetailsHere__c</fullName>
        <label>Enter "Why Lost?" Details Here</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Behavior_Score__c</fullName>
        <label>Enterprise Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_Combined_Score__c</fullName>
        <formula>Enterprise_Behavior_Score__c +  Enterprise_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_Demographic_Score__c</fullName>
        <label>Enterprise Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Behavior_Score__c</fullName>
        <label>Event Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Combined_Score__c</fullName>
        <formula>Event_Behavior_Score__c +  Event_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Demographic_Score__c</fullName>
        <label>Event Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Status_Counter__c</fullName>
        <formula>TODAY() -  Event_Lead_Status_Edit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Status_Edit_Date__c</fullName>
        <label>Event Lead Status Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Status__c</fullName>
        <label>Event Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Lost_Details__c</fullName>
        <label>Event Lost Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>